// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpgradeFallback > should match snapshot 1`] = `
<div
  aria-label="Función no disponible: Estadísticas avanzadas"
  class="mx-auto max-w-2xl rounded-xl border-amber-400 border-l-4 bg-white p-6 shadow-md md:mx-0"
  role="status"
>
  <div
    class="flex flex-col items-center gap-4 md:items-start"
  >
    <div
      class="flex items-center gap-4"
    >
      <svg
        aria-hidden="true"
        class="h-12 w-12 flex-shrink-0 text-amber-500"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <h3
        class="font-bold text-2xl text-gray-900"
      >
        Estadísticas avanzadas
      </h3>
    </div>
    <div
      class="w-full space-y-4"
    >
      <p
        class="text-center text-gray-600 md:text-left"
      >
        Esta función está disponible en el plan Profesional.
      </p>
      <p
        class="text-center text-gray-500 md:text-left"
      >
        Accedé a métricas detalladas de tus alojamientos.
      </p>
      <div
        class="flex justify-center pt-2 md:justify-start"
      >
        <a
          aria-label="Ver planes para acceder a Estadísticas avanzadas"
          class="inline-flex items-center gap-2 rounded-lg bg-amber-500 px-6 py-3 font-semibold text-white transition-colors duration-200 hover:bg-amber-600 focus:outline-none focus:ring-2 focus:ring-amber-500 focus:ring-offset-2"
          href="/precios/propietarios"
        >
          Ver planes
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17 8l4 4m0 0l-4 4m4-4H3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`UpgradeFallback > should match snapshot without description 1`] = `
<div
  aria-label="Función no disponible: Estadísticas avanzadas"
  class="mx-auto max-w-2xl rounded-xl border-amber-400 border-l-4 bg-white p-6 shadow-md md:mx-0"
  role="status"
>
  <div
    class="flex flex-col items-center gap-4 md:items-start"
  >
    <div
      class="flex items-center gap-4"
    >
      <svg
        aria-hidden="true"
        class="h-12 w-12 flex-shrink-0 text-amber-500"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <h3
        class="font-bold text-2xl text-gray-900"
      >
        Estadísticas avanzadas
      </h3>
    </div>
    <div
      class="w-full space-y-4"
    >
      <p
        class="text-center text-gray-600 md:text-left"
      >
        Esta función está disponible en el plan Profesional.
      </p>
      <div
        class="flex justify-center pt-2 md:justify-start"
      >
        <a
          aria-label="Ver planes para acceder a Estadísticas avanzadas"
          class="inline-flex items-center gap-2 rounded-lg bg-amber-500 px-6 py-3 font-semibold text-white transition-colors duration-200 hover:bg-amber-600 focus:outline-none focus:ring-2 focus:ring-amber-500 focus:ring-offset-2"
          href="/precios/propietarios"
        >
          Ver planes
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17 8l4 4m0 0l-4 4m4-4H3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;
